# washing

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.example  README.md  alembic.ini  docker-compose.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_applications.py  0002_machine_storage_mb.py  0003_machine_daily_metrics.py  0003_uppercase_machine_dimensions.py  0004_normalize_machine_identifiers.py  0004_typed_integrations.py  0005_drop_application_extra.py  0005_simplify_machine_metrics.py  0006_simplify_flavor_history.py  0007_celery_task_tracking.py  0008_application_projection_syncs.py  126a0810958b_sync_model_constraints.py  1365251cef3b_initial_schema.py  6f62a8e4b1c9_add_machine_recommendation_acknowledgement.py  750af5c34c18_remove_optimization_revisions.py  755ada20c181_initial_release_of_database.py  (+3 more)
app/: __init__.py  celery_app.py  main.py
docs/: README.md  architecture.md  celery-task-map.md  configuration.md  deployment.md  operations.md  optimizations.md  recommendations.md  setup.md
internal/: __init__.py
mock/: mixed-apps.json  single-vm.json  small-fleet.json
scripts/: start-flower.sh
tests/: conftest.py  constants.py  test_access_logging.py  test_api.py  test_auth.py  test_beat_config.py  test_domain_cron.py  test_flower_config.py  test_maintenance.py  test_mcp.py  test_optimizations_e2e.py  test_prometheus.py  test_scheduler.py  test_settings.py  test_smoke.py  test_task_tracking.py  test_worker_config.py  test_workers.py
(+194 files in other folders)
