[build-system]
requires = ["setuptools>=78.1.1", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "metrics-collector"
version = "0.1.0"
description = "FastAPI/Celery service for collecting machine inventory and metrics."
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.13,<2.0",
    "celery[redis]>=5.4,<6.0",
    "cryptography>=46.0.7,<47.0",
    "croniter>=2.0,<7.0",
    "fastapi>=0.136.1,<1.0",
    "fastmcp==3.0.0",
    "flower>=2.0.1,<3.0",
    "httpx>=0.27,<1.0",
    "pyjwt[crypto]>=2.10,<3.0",
    "psycopg[binary]>=3.1,<4.0",
    "prometheus-client>=0.20,<1.0",
    "pydantic-settings>=2.3,<3.0",
    "redis>=5.0,<7.0",
    "SQLAlchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0",
]

[tool.setuptools.packages.find]
include = ["app*", "internal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
